@startuml ClassDiagram_layer
left to right direction
skinparam linetype ortho


package "Presentation-layer" as PresentationLayer {

    class TaskFusionCli
}

package "Application-layer" {
    


    package "Facade-layer" as FacadeLayer {
        class TaskFusion 
        class EmployeeFacade
        class ProjectFacade 
        TaskFusion --> EmployeeFacade 
        TaskFusion --> ProjectFacade
    }


    package "Persistency-layer" as PersistencyLayer {
        class ProjectRepository
        class EmployeeRepository
    }

    package "Domain-layer" as DomainLayer {
        class Project 
        class Employee
        class "Other classes" as other
    }
}

TaskFusionCli --> TaskFusion 
EmployeeFacade --> EmployeeRepository
EmployeeRepository --> Employee
ProjectFacade --> ProjectRepository
ProjectRepository --> Project

Employee ..> other
Project ..> other

'PresentationLayer --> FacadeLayer
'FacadeLayer --> PersistencyLayer
'PersistencyLayer --> DomainLayer


@enduml